lab-istio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-server
spec:
  hosts:
  - server.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: server # interpreted as server.default.svc.cluster.local
